@@ -12,6 +12,7 @@
 - Mail component for crafting mail objects.
 - Item::mail and Item::file for helping with Mail crafting.
 - AUTH_DOMAIN env variable for defining global authorization domain.
+- Config::configureSecurity(...) for defining security policies against DDoS attacks and input length. 
 
 #### Changed
 - Skeleton: Update build.sh to account for last changes.
